// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2E should be neat 2`] = `
"{
  "generatedAt": "2024-10-15T00:00:00.000Z",
  "potoVersion": "poto-siril 0.4.2",
  "metrics": {
    "cumulatedLightIntegrationMinutes": 12,
    "cumulatedDarksIntegrationMinutes": 14,
    "totalLights": 10,
    "totalDarks": 12,
    "totalFlats": 12,
    "totalBiases": 12
  },
  "layerSets": [
    {
      "layerSetId": "Light_60.0s_Bin1_H_gain0",
      "filter": "H",
      "lightSequences": [
        {
          "sequenceId": "20240625-010850",
          "count": 3,
          "integrationMinutes": 3
        }
      ],
      "lightTotalCount": 3,
      "lightTotalIntegrationMinutes": 3,
      "lights": [
        {
          "setName": "Light_60.0s_Bin1_H_gain0",
          "type": "Light",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "H",
          "gain": 0,
          "sequenceId": "20240625-010850",
          "sequencePosition": 1,
          "datetime": "2024-06-25T01:08:50.000Z",
          "temperature": -10.1,
          "fileName": "Light_FOV_60.0s_Bin1_H_gain0_20240625-010850_-10.1C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Light/FOV",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Light/FOV/Light_FOV_60.0s_Bin1_H_gain0_20240625-010850_-10.1C_0001.fit",
          "projectDirectory": "tmp/project/H/Light_60.0s_Bin1_H_gain0"
        },
        {
          "setName": "Light_60.0s_Bin1_H_gain0",
          "type": "Light",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "H",
          "gain": 0,
          "sequenceId": "20240625-010850",
          "sequencePosition": 2,
          "datetime": "2024-06-25T01:08:51.000Z",
          "temperature": -10.1,
          "fileName": "Light_FOV_60.0s_Bin1_H_gain0_20240625-010851_-10.1C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Light/FOV",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Light/FOV/Light_FOV_60.0s_Bin1_H_gain0_20240625-010851_-10.1C_0002.fit",
          "projectDirectory": "tmp/project/H/Light_60.0s_Bin1_H_gain0"
        },
        {
          "setName": "Light_60.0s_Bin1_H_gain0",
          "type": "Light",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "H",
          "gain": 0,
          "sequenceId": "20240625-010850",
          "sequencePosition": 3,
          "datetime": "2024-06-25T01:08:52.000Z",
          "temperature": -10.1,
          "fileName": "Light_FOV_60.0s_Bin1_H_gain0_20240625-010852_-10.1C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Light/FOV",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Light/FOV/Light_FOV_60.0s_Bin1_H_gain0_20240625-010852_-10.1C_0003.fit",
          "projectDirectory": "tmp/project/H/Light_60.0s_Bin1_H_gain0"
        }
      ],
      "flatSet": "Flat_1.0ms_Bin1_H_gain100",
      "flatSequenceId": "20240511-094306",
      "flatsCount": 3,
      "flats": [
        {
          "setName": "Flat_1.0ms_Bin1_H_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "H",
          "gain": 100,
          "sequenceId": "20240511-094306",
          "sequencePosition": 1,
          "datetime": "2024-05-11T09:43:06.000Z",
          "temperature": -10.5,
          "fileName": "Flat_1.0ms_Bin1_H_gain100_20240511-094306_-10.5C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Flat/Flat_1.0ms_Bin1_H_gain100_20240511-094306_-10.5C_0001.fit",
          "projectDirectory": "tmp/project/H/Flat_1.0ms_Bin1_H_gain100"
        },
        {
          "setName": "Flat_1.0ms_Bin1_H_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "H",
          "gain": 100,
          "sequenceId": "20240511-094306",
          "sequencePosition": 2,
          "datetime": "2024-05-11T09:43:07.000Z",
          "temperature": -10.5,
          "fileName": "Flat_1.0ms_Bin1_H_gain100_20240511-094307_-10.5C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Flat/Flat_1.0ms_Bin1_H_gain100_20240511-094307_-10.5C_0002.fit",
          "projectDirectory": "tmp/project/H/Flat_1.0ms_Bin1_H_gain100"
        },
        {
          "setName": "Flat_1.0ms_Bin1_H_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "H",
          "gain": 100,
          "sequenceId": "20240511-094306",
          "sequencePosition": 3,
          "datetime": "2024-05-11T09:43:08.000Z",
          "temperature": -10.5,
          "fileName": "Flat_1.0ms_Bin1_H_gain100_20240511-094308_-10.5C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Flat/Flat_1.0ms_Bin1_H_gain100_20240511-094308_-10.5C_0003.fit",
          "projectDirectory": "tmp/project/H/Flat_1.0ms_Bin1_H_gain100"
        }
      ],
      "darkSet": "Dark_60.0s_Bin1_gain0",
      "darksCount": 2,
      "darkTotalIntegrationMinutes": 2,
      "darks": [
        {
          "setName": "Dark_60.0s_Bin1_gain0",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": null,
          "gain": 0,
          "sequenceId": "20240308-155722",
          "sequencePosition": 1,
          "datetime": "2024-03-08T15:57:22.000Z",
          "temperature": -10,
          "fileName": "Dark_60.0s_Bin1_gain0_20240308-155722_-10.0C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_gain0_20240308-155722_-10.0C_0001.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain0"
        },
        {
          "setName": "Dark_60.0s_Bin1_gain0",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": null,
          "gain": 0,
          "sequenceId": "20240308-155722",
          "sequencePosition": 2,
          "datetime": "2024-03-08T15:57:23.000Z",
          "temperature": -10,
          "fileName": "Dark_60.0s_Bin1_gain0_20240308-155723_-10.0C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_gain0_20240308-155723_-10.0C_0002.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain0"
        }
      ],
      "biasSet": "Bias_1.0ms_Bin1_gain100",
      "biasesCount": 3,
      "biases": [
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 1,
          "datetime": "2023-09-10T10:11:31.000Z",
          "temperature": -9.8,
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        },
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 2,
          "datetime": "2023-09-10T10:11:32.000Z",
          "temperature": -9.8,
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        },
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 3,
          "datetime": "2023-09-10T10:11:33.000Z",
          "temperature": -9.8,
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        }
      ]
    },
    {
      "layerSetId": "Light_60.0s_Bin1_S_gain100__20240624-010840",
      "filter": "S",
      "lightSequences": [
        {
          "sequenceId": "20240624-010840",
          "count": 3,
          "integrationMinutes": 3
        }
      ],
      "lightTotalCount": 3,
      "lightTotalIntegrationMinutes": 3,
      "lights": [
        {
          "setName": "Light_60.0s_Bin1_S_gain100",
          "type": "Light",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240624-010840",
          "sequencePosition": 1,
          "datetime": "2024-06-24T01:08:40.000Z",
          "temperature": -10.1,
          "fileName": "Light_FOV_60.0s_Bin1_S_gain100_20240624-010840_-10.1C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Light/FOV",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Light/FOV/Light_FOV_60.0s_Bin1_S_gain100_20240624-010840_-10.1C_0001.fit",
          "projectDirectory": "tmp/project/S/Light_60.0s_Bin1_S_gain100"
        },
        {
          "setName": "Light_60.0s_Bin1_S_gain100",
          "type": "Light",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240624-010840",
          "sequencePosition": 2,
          "datetime": "2024-06-24T01:08:41.000Z",
          "temperature": -10.1,
          "fileName": "Light_FOV_60.0s_Bin1_S_gain100_20240624-010841_-10.1C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Light/FOV",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Light/FOV/Light_FOV_60.0s_Bin1_S_gain100_20240624-010841_-10.1C_0002.fit",
          "projectDirectory": "tmp/project/S/Light_60.0s_Bin1_S_gain100"
        },
        {
          "setName": "Light_60.0s_Bin1_S_gain100",
          "type": "Light",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240624-010840",
          "sequencePosition": 3,
          "datetime": "2024-06-24T01:08:42.000Z",
          "temperature": -10.1,
          "fileName": "Light_FOV_60.0s_Bin1_S_gain100_20240624-010842_-10.1C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Light/FOV",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Light/FOV/Light_FOV_60.0s_Bin1_S_gain100_20240624-010842_-10.1C_0003.fit",
          "projectDirectory": "tmp/project/S/Light_60.0s_Bin1_S_gain100"
        }
      ],
      "flatSet": "Flat_1.0ms_Bin1_S_gain100",
      "flatSequenceId": "20240624-094304",
      "flatsCount": 3,
      "flats": [
        {
          "setName": "Flat_1.0ms_Bin1_S_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240624-094304",
          "sequencePosition": 1,
          "datetime": "2024-06-24T09:43:04.000Z",
          "temperature": -10.5,
          "fileName": "Flat_1.0ms_Bin1_S_gain100_20240624-094304_-10.5C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240624-094304_-10.5C_0001.fit",
          "projectDirectory": "tmp/project/S/Flat_1.0ms_Bin1_S_gain100"
        },
        {
          "setName": "Flat_1.0ms_Bin1_S_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240624-094304",
          "sequencePosition": 2,
          "datetime": "2024-06-24T09:43:05.000Z",
          "temperature": -10,
          "fileName": "Flat_1.0ms_Bin1_S_gain100_20240624-094305_-10.0C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240624-094305_-10.0C_0002.fit",
          "projectDirectory": "tmp/project/S/Flat_1.0ms_Bin1_S_gain100"
        },
        {
          "setName": "Flat_1.0ms_Bin1_S_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240624-094304",
          "sequencePosition": 3,
          "datetime": "2024-06-24T09:43:06.000Z",
          "temperature": -10.5,
          "fileName": "Flat_1.0ms_Bin1_S_gain100_20240624-094306_-10.5C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240624-094306_-10.5C_0003.fit",
          "projectDirectory": "tmp/project/S/Flat_1.0ms_Bin1_S_gain100"
        }
      ],
      "darkSet": "Dark_60.0s_Bin1_L_gain100",
      "darksCount": 4,
      "darkTotalIntegrationMinutes": 4,
      "darks": [
        {
          "setName": "Dark_60.0s_Bin1_L_gain100",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 100,
          "sequenceId": "20240308-155722",
          "sequencePosition": 1,
          "datetime": "2024-03-08T15:57:22.000Z",
          "temperature": -10,
          "fileName": "Dark_60.0s_Bin1_L_gain100_20240308-155722_-10.0C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_L_gain100_20240308-155722_-10.0C_0001.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain100"
        },
        {
          "setName": "Dark_60.0s_Bin1_L_gain100",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 100,
          "sequenceId": "20240308-155722",
          "sequencePosition": 2,
          "datetime": "2024-03-08T15:57:23.000Z",
          "temperature": -10,
          "fileName": "Dark_60.0s_Bin1_L_gain100_20240308-155723_-10.0C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_L_gain100_20240308-155723_-10.0C_0002.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain100"
        },
        {
          "setName": "Dark_60.0s_Bin1_L_gain100",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 100,
          "sequenceId": "20240308-155722",
          "sequencePosition": 3,
          "datetime": "2024-03-08T15:57:24.000Z",
          "temperature": -10,
          "fileName": "Dark_60.0s_Bin1_L_gain100_20240308-155724_-10.0C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_L_gain100_20240308-155724_-10.0C_0003.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain100"
        },
        {
          "setName": "Dark_60.0s_Bin1_L_gain100",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 100,
          "sequenceId": "20240308-155722",
          "sequencePosition": 4,
          "datetime": "2024-03-08T15:57:25.000Z",
          "temperature": -10,
          "fileName": "Dark_60.0s_Bin1_L_gain100_20240308-155725_-10.0C_0004.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_L_gain100_20240308-155725_-10.0C_0004.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain100"
        }
      ],
      "biasSet": "Bias_1.0ms_Bin1_gain100",
      "biasesCount": 3,
      "biases": [
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 1,
          "datetime": "2023-09-10T10:11:31.000Z",
          "temperature": -9.8,
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        },
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 2,
          "datetime": "2023-09-10T10:11:32.000Z",
          "temperature": -9.8,
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        },
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 3,
          "datetime": "2023-09-10T10:11:33.000Z",
          "temperature": -9.8,
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        }
      ]
    },
    {
      "layerSetId": "Light_120.0s_Bin1_S_gain0__20240626-010853",
      "filter": "S",
      "lightSequences": [
        {
          "sequenceId": "20240626-010853",
          "count": 2,
          "integrationMinutes": 4
        }
      ],
      "lightTotalCount": 2,
      "lightTotalIntegrationMinutes": 4,
      "lights": [
        {
          "setName": "Light_120.0s_Bin1_S_gain0",
          "type": "Light",
          "bulb": "120.0s",
          "bulbMs": 120000,
          "bin": "Bin1",
          "filter": "S",
          "gain": 0,
          "sequenceId": "20240626-010853",
          "sequencePosition": 1,
          "datetime": "2024-06-26T01:08:53.000Z",
          "temperature": -10.1,
          "fileName": "Light_FOV_120.0s_Bin1_S_gain0_20240626-010853_-10.1C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Light/FOV",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Light/FOV/Light_FOV_120.0s_Bin1_S_gain0_20240626-010853_-10.1C_0001.fit",
          "projectDirectory": "tmp/project/S/Light_120.0s_Bin1_S_gain0"
        },
        {
          "setName": "Light_120.0s_Bin1_S_gain0",
          "type": "Light",
          "bulb": "120.0s",
          "bulbMs": 120000,
          "bin": "Bin1",
          "filter": "S",
          "gain": 0,
          "sequenceId": "20240626-010853",
          "sequencePosition": 2,
          "datetime": "2024-06-26T01:08:54.000Z",
          "temperature": -10.1,
          "fileName": "Light_FOV_120.0s_Bin1_S_gain0_20240626-010854_-10.1C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Light/FOV",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Light/FOV/Light_FOV_120.0s_Bin1_S_gain0_20240626-010854_-10.1C_0002.fit",
          "projectDirectory": "tmp/project/S/Light_120.0s_Bin1_S_gain0"
        }
      ],
      "flatSet": "Flat_1.0ms_Bin1_S_gain100",
      "flatSequenceId": "20240626-094304",
      "flatsCount": 3,
      "flats": [
        {
          "setName": "Flat_1.0ms_Bin1_S_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240626-094304",
          "sequencePosition": 1,
          "datetime": "2024-06-26T09:43:04.000Z",
          "temperature": -10.5,
          "fileName": "Flat_1.0ms_Bin1_S_gain100_20240626-094304_-10.5C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240626-094304_-10.5C_0001.fit",
          "projectDirectory": "tmp/project/S/Flat_1.0ms_Bin1_S_gain100"
        },
        {
          "setName": "Flat_1.0ms_Bin1_S_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240626-094304",
          "sequencePosition": 2,
          "datetime": "2024-06-26T09:43:05.000Z",
          "temperature": -10,
          "fileName": "Flat_1.0ms_Bin1_S_gain100_20240626-094305_-10.0C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240626-094305_-10.0C_0002.fit",
          "projectDirectory": "tmp/project/S/Flat_1.0ms_Bin1_S_gain100"
        },
        {
          "setName": "Flat_1.0ms_Bin1_S_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240626-094304",
          "sequencePosition": 3,
          "datetime": "2024-06-26T09:43:06.000Z",
          "temperature": -10.5,
          "fileName": "Flat_1.0ms_Bin1_S_gain100_20240626-094306_-10.5C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240626-094306_-10.5C_0003.fit",
          "projectDirectory": "tmp/project/S/Flat_1.0ms_Bin1_S_gain100"
        }
      ],
      "darkSet": "Dark_120.0s_Bin1_L_gain0",
      "darksCount": 2,
      "darkTotalIntegrationMinutes": 4,
      "darks": [
        {
          "setName": "Dark_120.0s_Bin1_L_gain0",
          "type": "Dark",
          "bulb": "120.0s",
          "bulbMs": 120000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 0,
          "sequenceId": "20240308-155723",
          "sequencePosition": 1,
          "datetime": "2024-03-08T15:57:23.000Z",
          "temperature": -10,
          "fileName": "Dark_120.0s_Bin1_L_gain0_20240308-155723_-10.0C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_120.0s_Bin1_L_gain0_20240308-155723_-10.0C_0001.fit",
          "projectDirectory": "tmp/project/any/Dark_120.0s_Bin1_gain0"
        },
        {
          "setName": "Dark_120.0s_Bin1_L_gain0",
          "type": "Dark",
          "bulb": "120.0s",
          "bulbMs": 120000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 0,
          "sequenceId": "20240308-155723",
          "sequencePosition": 2,
          "datetime": "2024-03-08T15:57:24.000Z",
          "temperature": -10,
          "fileName": "Dark_120.0s_Bin1_L_gain0_20240308-155724_-10.0C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_120.0s_Bin1_L_gain0_20240308-155724_-10.0C_0002.fit",
          "projectDirectory": "tmp/project/any/Dark_120.0s_Bin1_gain0"
        }
      ],
      "biasSet": "Bias_1.0ms_Bin1_gain100",
      "biasesCount": 3,
      "biases": [
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 1,
          "datetime": "2023-09-10T10:11:31.000Z",
          "temperature": -9.8,
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        },
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 2,
          "datetime": "2023-09-10T10:11:32.000Z",
          "temperature": -9.8,
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        },
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 3,
          "datetime": "2023-09-10T10:11:33.000Z",
          "temperature": -9.8,
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        }
      ]
    },
    {
      "layerSetId": "Light_60.0s_Bin1_S_gain100__20240627-010820",
      "filter": "S",
      "lightSequences": [
        {
          "sequenceId": "20240627-010820",
          "count": 2,
          "integrationMinutes": 2
        }
      ],
      "lightTotalCount": 2,
      "lightTotalIntegrationMinutes": 2,
      "lights": [
        {
          "setName": "Light_60.0s_Bin1_S_gain100",
          "type": "Light",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240627-010820",
          "sequencePosition": 1,
          "datetime": "2024-06-27T01:08:20.000Z",
          "temperature": -10.1,
          "fileName": "Light_FOV_60.0s_Bin1_S_gain100_20240627-010820_-10.1C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Light/FOV",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Light/FOV/Light_FOV_60.0s_Bin1_S_gain100_20240627-010820_-10.1C_0001.fit",
          "projectDirectory": "tmp/project/S/Light_60.0s_Bin1_S_gain100"
        },
        {
          "setName": "Light_60.0s_Bin1_S_gain100",
          "type": "Light",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240627-010820",
          "sequencePosition": 2,
          "datetime": "2024-06-27T01:08:21.000Z",
          "temperature": -10.1,
          "fileName": "Light_FOV_60.0s_Bin1_S_gain100_20240627-010821_-10.1C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Light/FOV",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Light/FOV/Light_FOV_60.0s_Bin1_S_gain100_20240627-010821_-10.1C_0002.fit",
          "projectDirectory": "tmp/project/S/Light_60.0s_Bin1_S_gain100"
        }
      ],
      "flatSet": "Flat_1.0ms_Bin1_S_gain100",
      "flatSequenceId": "20240626-094304",
      "flatsCount": 3,
      "flats": [
        {
          "setName": "Flat_1.0ms_Bin1_S_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240626-094304",
          "sequencePosition": 1,
          "datetime": "2024-06-26T09:43:04.000Z",
          "temperature": -10.5,
          "fileName": "Flat_1.0ms_Bin1_S_gain100_20240626-094304_-10.5C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240626-094304_-10.5C_0001.fit",
          "projectDirectory": "tmp/project/S/Flat_1.0ms_Bin1_S_gain100"
        },
        {
          "setName": "Flat_1.0ms_Bin1_S_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240626-094304",
          "sequencePosition": 2,
          "datetime": "2024-06-26T09:43:05.000Z",
          "temperature": -10,
          "fileName": "Flat_1.0ms_Bin1_S_gain100_20240626-094305_-10.0C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240626-094305_-10.0C_0002.fit",
          "projectDirectory": "tmp/project/S/Flat_1.0ms_Bin1_S_gain100"
        },
        {
          "setName": "Flat_1.0ms_Bin1_S_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240626-094304",
          "sequencePosition": 3,
          "datetime": "2024-06-26T09:43:06.000Z",
          "temperature": -10.5,
          "fileName": "Flat_1.0ms_Bin1_S_gain100_20240626-094306_-10.5C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump-1/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump-1/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240626-094306_-10.5C_0003.fit",
          "projectDirectory": "tmp/project/S/Flat_1.0ms_Bin1_S_gain100"
        }
      ],
      "darkSet": "Dark_60.0s_Bin1_L_gain100",
      "darksCount": 4,
      "darkTotalIntegrationMinutes": 4,
      "darks": [
        {
          "setName": "Dark_60.0s_Bin1_L_gain100",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 100,
          "sequenceId": "20240308-155722",
          "sequencePosition": 1,
          "datetime": "2024-03-08T15:57:22.000Z",
          "temperature": -10,
          "fileName": "Dark_60.0s_Bin1_L_gain100_20240308-155722_-10.0C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_L_gain100_20240308-155722_-10.0C_0001.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain100"
        },
        {
          "setName": "Dark_60.0s_Bin1_L_gain100",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 100,
          "sequenceId": "20240308-155722",
          "sequencePosition": 2,
          "datetime": "2024-03-08T15:57:23.000Z",
          "temperature": -10,
          "fileName": "Dark_60.0s_Bin1_L_gain100_20240308-155723_-10.0C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_L_gain100_20240308-155723_-10.0C_0002.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain100"
        },
        {
          "setName": "Dark_60.0s_Bin1_L_gain100",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 100,
          "sequenceId": "20240308-155722",
          "sequencePosition": 3,
          "datetime": "2024-03-08T15:57:24.000Z",
          "temperature": -10,
          "fileName": "Dark_60.0s_Bin1_L_gain100_20240308-155724_-10.0C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_L_gain100_20240308-155724_-10.0C_0003.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain100"
        },
        {
          "setName": "Dark_60.0s_Bin1_L_gain100",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 100,
          "sequenceId": "20240308-155722",
          "sequencePosition": 4,
          "datetime": "2024-03-08T15:57:25.000Z",
          "temperature": -10,
          "fileName": "Dark_60.0s_Bin1_L_gain100_20240308-155725_-10.0C_0004.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_L_gain100_20240308-155725_-10.0C_0004.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain100"
        }
      ],
      "biasSet": "Bias_1.0ms_Bin1_gain100",
      "biasesCount": 3,
      "biases": [
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 1,
          "datetime": "2023-09-10T10:11:31.000Z",
          "temperature": -9.8,
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        },
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 2,
          "datetime": "2023-09-10T10:11:32.000Z",
          "temperature": -9.8,
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        },
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 3,
          "datetime": "2023-09-10T10:11:33.000Z",
          "temperature": -9.8,
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        }
      ]
    }
  ]
}"
`;

exports[`E2E should be neat 4`] = `
"#############################################
#             _                  _      _ _ #
# _ __   ___ | |_ ___        ___(_)_ __(_) |#
#| '_ \\ / _ \\| __/ _ \\ _____/ __| | '__| | |#
#| |_) | (_) | || (_) |_____\\__ \\ | |  | | |#
#| .__/ \\___/ \\__\\___/      |___/_|_|  |_|_|#
#|_|                                        #
#############################################
# Adapted from the Cyril Richard Mono_Preprocessing v1.3 for poto-siril.

############################################
# 
# Variables:
#   poto-dir: <ROOT>/tmp/project/
#   biases: <ROOT>/tmp/project/any/Bias_1.0ms_Bin1_gain100/
#   flats: <ROOT>/tmp/project/H/Flat_1.0ms_Bin1_H_gain100/
#   darks: <ROOT>/tmp/project/any/Dark_60.0s_Bin1_gain0/
#   lights: <ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0/
#   process: <ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0_process/
#   masters: <ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0_masters/
#
############################################

requires 1.2.0

# Convert Bias Frames to .fit files
cd <ROOT>/tmp/project/any/Bias_1.0ms_Bin1_gain100
convert bias -out=<ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0_process
cd <ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0_process

# Stack Bias Frames to bias_stacked.fit
stack bias rej 3 3 -nonorm -out=<ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0_masters/bias_stacked

# Convert Flat Frames to .fit files
cd <ROOT>/tmp/project/H/Flat_1.0ms_Bin1_H_gain100
convert flat -out=<ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0_process
cd <ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0_process

# Calibrate Flat Frames
calibrate flat -bias=<ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0_masters/bias_stacked

# Stack Flat Frames to pp_flat_stacked.fit
stack pp_flat rej 3 3 -norm=mul -out=<ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0_masters/pp_flat_stacked

# Convert Dark Frames to .fit files
cd <ROOT>/tmp/project/any/Dark_60.0s_Bin1_gain0
convert dark -out=<ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0_process
cd <ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0_process

# Stack Dark Frames to dark_stacked.fit
stack dark rej 3 3 -nonorm -out=<ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0_masters/dark_stacked

# Convert Light Frames to .fit files
cd <ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0
convert light -out=<ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0_process
cd <ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0_process

# Calibrate Light Frames
calibrate light -dark=<ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0_masters/dark_stacked -flat=<ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0_masters/pp_flat_stacked -cc=dark

# Align Lights
register pp_light

close
"
`;

exports[`E2E should be neat 5`] = `
"#############################################
#             _                  _      _ _ #
# _ __   ___ | |_ ___        ___(_)_ __(_) |#
#| '_ \\ / _ \\| __/ _ \\ _____/ __| | '__| | |#
#| |_) | (_) | || (_) |_____\\__ \\ | |  | | |#
#| .__/ \\___/ \\__\\___/      |___/_|_|  |_|_|#
#|_|                                        #
#############################################
# Adapted from the Cyril Richard Mono_Preprocessing v1.3 for poto-siril.

############################################
# 
# Variables:
#   poto-dir: <ROOT>/tmp/project/
#   biases: <ROOT>/tmp/project/any/Bias_1.0ms_Bin1_gain100/
#   flats: <ROOT>/tmp/project/S/Flat_1.0ms_Bin1_S_gain100/
#   darks: <ROOT>/tmp/project/any/Dark_120.0s_Bin1_gain0/
#   lights: <ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0/
#   process: <ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process/
#   masters: <ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_masters/
#
############################################

requires 1.2.0

# Convert Bias Frames to .fit files
cd <ROOT>/tmp/project/any/Bias_1.0ms_Bin1_gain100
convert bias -out=<ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process
cd <ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process

# Stack Bias Frames to bias_stacked.fit
stack bias rej 3 3 -nonorm -out=<ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_masters/bias_stacked

# Convert Flat Frames to .fit files
cd <ROOT>/tmp/project/S/Flat_1.0ms_Bin1_S_gain100
convert flat -out=<ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process
cd <ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process

# Calibrate Flat Frames
calibrate flat -bias=<ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_masters/bias_stacked

# Stack Flat Frames to pp_flat_stacked.fit
stack pp_flat rej 3 3 -norm=mul -out=<ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_masters/pp_flat_stacked

# Convert Dark Frames to .fit files
cd <ROOT>/tmp/project/any/Dark_120.0s_Bin1_gain0
convert dark -out=<ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process
cd <ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process

# Stack Dark Frames to dark_stacked.fit
stack dark rej 3 3 -nonorm -out=<ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_masters/dark_stacked

# Convert Light Frames to .fit files
cd <ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0
convert light -out=<ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process
cd <ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process

# Calibrate Light Frames
calibrate light -dark=<ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_masters/dark_stacked -flat=<ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_masters/pp_flat_stacked -cc=dark

# Align Lights
register pp_light

close
"
`;

exports[`E2E should be neat 6`] = `
"#############################################
#             _                  _      _ _ #
# _ __   ___ | |_ ___        ___(_)_ __(_) |#
#| '_ \\ / _ \\| __/ _ \\ _____/ __| | '__| | |#
#| |_) | (_) | || (_) |_____\\__ \\ | |  | | |#
#| .__/ \\___/ \\__\\___/      |___/_|_|  |_|_|#
#|_|                                        #
#############################################
# Adapted from the Cyril Richard Mono_Preprocessing v1.3 for poto-siril.

############################################
# 
# Variables:
#   poto-dir: <ROOT>/tmp/project/
#   biases: <ROOT>/tmp/project/any/Bias_1.0ms_Bin1_gain100/
#   flats: <ROOT>/tmp/project/S/Flat_1.0ms_Bin1_S_gain100/
#   darks: <ROOT>/tmp/project/any/Dark_60.0s_Bin1_gain100/
#   lights: <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100/
#   process: <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process/
#   masters: <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_masters/
#
############################################

requires 1.2.0

# Convert Bias Frames to .fit files
cd <ROOT>/tmp/project/any/Bias_1.0ms_Bin1_gain100
convert bias -out=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process
cd <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process

# Stack Bias Frames to bias_stacked.fit
stack bias rej 3 3 -nonorm -out=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_masters/bias_stacked

# Convert Flat Frames to .fit files
cd <ROOT>/tmp/project/S/Flat_1.0ms_Bin1_S_gain100
convert flat -out=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process
cd <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process

# Calibrate Flat Frames
calibrate flat -bias=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_masters/bias_stacked

# Stack Flat Frames to pp_flat_stacked.fit
stack pp_flat rej 3 3 -norm=mul -out=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_masters/pp_flat_stacked

# Convert Dark Frames to .fit files
cd <ROOT>/tmp/project/any/Dark_60.0s_Bin1_gain100
convert dark -out=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process
cd <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process

# Stack Dark Frames to dark_stacked.fit
stack dark rej 3 3 -nonorm -out=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_masters/dark_stacked

# Convert Light Frames to .fit files
cd <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100
convert light -out=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process
cd <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process

# Calibrate Light Frames
calibrate light -dark=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_masters/dark_stacked -flat=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_masters/pp_flat_stacked -cc=dark

# Align Lights
register pp_light

close
"
`;

exports[`E2E should be neat 7`] = `
"#############################################
#             _                  _      _ _ #
# _ __   ___ | |_ ___        ___(_)_ __(_) |#
#| '_ \\ / _ \\| __/ _ \\ _____/ __| | '__| | |#
#| |_) | (_) | || (_) |_____\\__ \\ | |  | | |#
#| .__/ \\___/ \\__\\___/      |___/_|_|  |_|_|#
#|_|                                        #
#############################################
# Adapted from the Cyril Richard Mono_Preprocessing v1.3 for poto-siril.

############################################
# 
# Variables:
#   poto-dir: <ROOT>/tmp/project/
#   biases: <ROOT>/tmp/project/any/Bias_1.0ms_Bin1_gain100/
#   flats: <ROOT>/tmp/project/S/Flat_1.0ms_Bin1_S_gain100/
#   darks: <ROOT>/tmp/project/any/Dark_60.0s_Bin1_gain100/
#   lights: <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100/
#   process: <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process/
#   masters: <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_masters/
#
############################################

requires 1.2.0

# Convert Bias Frames to .fit files
cd <ROOT>/tmp/project/any/Bias_1.0ms_Bin1_gain100
convert bias -out=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process
cd <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process

# Stack Bias Frames to bias_stacked.fit
stack bias rej 3 3 -nonorm -out=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_masters/bias_stacked

# Convert Flat Frames to .fit files
cd <ROOT>/tmp/project/S/Flat_1.0ms_Bin1_S_gain100
convert flat -out=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process
cd <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process

# Calibrate Flat Frames
calibrate flat -bias=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_masters/bias_stacked

# Stack Flat Frames to pp_flat_stacked.fit
stack pp_flat rej 3 3 -norm=mul -out=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_masters/pp_flat_stacked

# Convert Dark Frames to .fit files
cd <ROOT>/tmp/project/any/Dark_60.0s_Bin1_gain100
convert dark -out=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process
cd <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process

# Stack Dark Frames to dark_stacked.fit
stack dark rej 3 3 -nonorm -out=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_masters/dark_stacked

# Convert Light Frames to .fit files
cd <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100
convert light -out=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process
cd <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process

# Calibrate Light Frames
calibrate light -dark=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_masters/dark_stacked -flat=<ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_masters/pp_flat_stacked -cc=dark

# Align Lights
register pp_light

close
"
`;

exports[`E2E should be neat 8`] = `
[
  "debug: Deleted: tmp/asiair-dump-1/Autorun/Flat/Flat_1.0ms_Bin1_H_gain100_20240511-094306_-10.5C_0001_thn.jpg",
  "debug: Deleted: tmp/asiair-dump-1/Autorun/Flat/Flat_1.0ms_Bin1_H_gain100_20240511-094307_-10.5C_0002_thn.jpg",
  "debug: Deleted: tmp/asiair-dump-1/Autorun/Flat/Flat_1.0ms_Bin1_H_gain100_20240511-094308_-10.5C_0003_thn.jpg",
  "info: Asiair dump cleaning - Thumbnails deleted ✅",
  "info: Deleted: tmp/asiair-dump-1/empty/empty",
  "info: Deleted: tmp/asiair-dump-1/empty",
  "info: Asiair dump cleaning - Empty dirs deleted ✅",
  "prompt: [
  {
    "type": "confirm",
    "name": "createProjectDirectory",
    "message": "Directory tmp/project does not exist. Do you want to create it?",
    "initial": true
  }
]",
  "step: Reading input directories",
  "debug: Reading input directory tmp/asiair-dump-1",
  "debug: ASIAIR dump detected in input dir tmp/asiair-dump-1.",
  "debug: Skipping unknown file (Flat_1.0ms_Bin1_S_gain100_20240511-094306_-10.5C_0001.fot)",
  "prompt: [
  {
    "type": "select",
    "name": "selectedInputSubDirectory",
    "message": "Files found in both Autorun and Plan directories. How do we proceed?",
    "choices": [
      "Use Autorun directory",
      "Use Plan directory",
      "Use both directory"
    ]
  }
]",
  "info: Found 21 FITS in input dir tmp/asiair-dump-1.",
  "debug: Reading input directory tmp/bank",
  "info: Found 17 FITS in input dir tmp/bank.",
  "info: Found 38 .fit files in input directories 🌋.",
  "info: Including 10 lights 🌟.",
  "step: Matching lights and flats (early stage)",
  "warning: No matching light for Flat_1.0ms_Bin1_O_gain100 (seq 20240511-094306). Skipping.",
  "warning: No matching light for Flat_1.0ms_Bin2_S_gain100 (seq 20240511-094304). Skipping.",
  "info: Found 9 matching flats (3 sequences).",
  "step: Matching lights and flats (final stage)",
  "info: 🤚 Several sequences found for flat set Flat_1.0ms_Bin1_S_gain100:",
  "info: - 20240624-094304
- 20240626-094304",
  "debug: We assume that multiple sequences of the same flat set indicate multiple night sessions where the flats had to be re-shot in between (e.g., a significant date gap between shooting sessions and the lights were not collected with the same collimation and/or same dust in the optical train).",
  "info: We will ask you to tag each concerned light sequence to the right flat sequence.",
  "prompt: [
  {
    "type": "select",
    "name": "selectedFlatSequence",
    "message": "Light_60.0s_Bin1_S_gain100 20240624-010840 will use",
    "choices": [
      {
        "name": "Flat_1.0ms_Bin1_S_gain100__20240624-094304",
        "message": "Flat_1.0ms_Bin1_S_gain100 20240624-094304"
      },
      {
        "name": "Flat_1.0ms_Bin1_S_gain100__20240626-094304",
        "message": "Flat_1.0ms_Bin1_S_gain100 20240626-094304"
      }
    ]
  }
]",
  "prompt: [
  {
    "type": "select",
    "name": "selectedFlatSequence",
    "message": "Light_120.0s_Bin1_S_gain0 20240626-010853 will use",
    "choices": [
      {
        "name": "Flat_1.0ms_Bin1_S_gain100__20240624-094304",
        "message": "Flat_1.0ms_Bin1_S_gain100 20240624-094304"
      },
      {
        "name": "Flat_1.0ms_Bin1_S_gain100__20240626-094304",
        "message": "Flat_1.0ms_Bin1_S_gain100 20240626-094304"
      }
    ]
  }
]",
  "prompt: [
  {
    "type": "select",
    "name": "selectedFlatSequence",
    "message": "Light_60.0s_Bin1_S_gain100 20240627-010820 will use",
    "choices": [
      {
        "name": "Flat_1.0ms_Bin1_S_gain100__20240624-094304",
        "message": "Flat_1.0ms_Bin1_S_gain100 20240624-094304"
      },
      {
        "name": "Flat_1.0ms_Bin1_S_gain100__20240626-094304",
        "message": "Flat_1.0ms_Bin1_S_gain100 20240626-094304"
      }
    ]
  }
]",
  "space: ",
  "info: 👉 Light - Flat matching summary:",
  "debug: - Light_60.0s_Bin1_H_gain0 20240625-010850 🏹 Flat_1.0ms_Bin1_H_gain100 20240511-094306",
  "debug: - Light_60.0s_Bin1_S_gain100 20240624-010840 🏹 Flat_1.0ms_Bin1_S_gain100 20240624-094304",
  "debug: - Light_120.0s_Bin1_S_gain0 20240626-010853 🏹 Flat_1.0ms_Bin1_S_gain100 20240626-094304",
  "debug: - Light_60.0s_Bin1_S_gain100 20240627-010820 🏹 Flat_1.0ms_Bin1_S_gain100 20240626-094304",
  "step: Tagging darks and biases",
  "info: Found 17 darks+baises files (without temperature filtering).",
  "prompt: [
  {
    "type": "input",
    "name": "darkTemperatureTolerance",
    "message": "Select the temperature tolerance for lights-darks matching (+/-0.5°C to +/-10°C).",
    "initial": 3
  }
]",
  "space: ",
  "info: 👉 Light - Dark matching summary:",
  "debug: - Light_60.0s_Bin1_H_gain0 20240625-010850 🏹 Dark_60.0s_Bin1_gain0 (2 files / 2 minutes)",
  "debug: - Light_60.0s_Bin1_S_gain100__20240624-010840 🏹 Dark_60.0s_Bin1_L_gain100 (4 files / 4 minutes)",
  "debug: - Light_120.0s_Bin1_S_gain0__20240626-010853 🏹 Dark_120.0s_Bin1_L_gain0 (2 files / 4 minutes)",
  "debug: - Light_60.0s_Bin1_S_gain100__20240627-010820 🏹 Dark_60.0s_Bin1_L_gain100 (4 files / 4 minutes)",
  "info: 👉 Flat - Bias matching summary:",
  "debug: - Flat_1.0ms_Bin1_H_gain100 20240511-094306 🏹 Bias_1.0ms_Bin1_gain100 (3 files)",
  "debug: - Flat_1.0ms_Bin1_S_gain100 20240624-094304 🏹 Bias_1.0ms_Bin1_gain100 (3 files)",
  "debug: - Flat_1.0ms_Bin1_S_gain100 20240626-094304 🏹 Bias_1.0ms_Bin1_gain100 (3 files)",
  "debug: - Flat_1.0ms_Bin1_S_gain100 20240626-094304 🏹 Bias_1.0ms_Bin1_gain100 (3 files)",
  "step: Preview before dispatching",
  "info: 🔭 Cumulated light integration: 12 minutes.",
  "info: 📦 Project size: 10 lights, 12 darks, 12 flats, 12 biases.",
  "space: ",
  "info: 🌌 Layer sets:",
  "debug: - Light_60.0s_Bin1_H_gain0 has 3 lights, 2 darks, 3 flats, 3 biases.",
  "debug: - Light_60.0s_Bin1_S_gain100__20240624-010840 has 3 lights, 4 darks, 3 flats, 3 biases.",
  "debug: - Light_120.0s_Bin1_S_gain0__20240626-010853 has 2 lights, 2 darks, 3 flats, 3 biases.",
  "debug: - Light_60.0s_Bin1_S_gain100__20240627-010820 has 2 lights, 4 darks, 3 flats, 3 biases.",
  "space: ",
  "prompt: [
  {
    "type": "confirm",
    "name": "go",
    "message": "Do you want to proceed with the dispatch?",
    "initial": true
  }
]",
  "step: Dispatching",
  "debug: - Light_FOV_60.0s_Bin1_H_gain0_20240625-010850_-10.1C_0001.fit dispatched.",
  "debug: - Light_FOV_60.0s_Bin1_H_gain0_20240625-010851_-10.1C_0002.fit dispatched.",
  "debug: - Light_FOV_60.0s_Bin1_H_gain0_20240625-010852_-10.1C_0003.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_gain0_20240308-155722_-10.0C_0001.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_gain0_20240308-155723_-10.0C_0002.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_H_gain100_20240511-094306_-10.5C_0001.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_H_gain100_20240511-094307_-10.5C_0002.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_H_gain100_20240511-094308_-10.5C_0003.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit dispatched.",
  "debug: - Light_FOV_60.0s_Bin1_S_gain100_20240624-010840_-10.1C_0001.fit dispatched.",
  "debug: - Light_FOV_60.0s_Bin1_S_gain100_20240624-010841_-10.1C_0002.fit dispatched.",
  "debug: - Light_FOV_60.0s_Bin1_S_gain100_20240624-010842_-10.1C_0003.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_L_gain100_20240308-155722_-10.0C_0001.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_L_gain100_20240308-155723_-10.0C_0002.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_L_gain100_20240308-155724_-10.0C_0003.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_L_gain100_20240308-155725_-10.0C_0004.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_S_gain100_20240624-094304_-10.5C_0001.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_S_gain100_20240624-094305_-10.0C_0002.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_S_gain100_20240624-094306_-10.5C_0003.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit dispatched.",
  "debug: - Light_FOV_120.0s_Bin1_S_gain0_20240626-010853_-10.1C_0001.fit dispatched.",
  "debug: - Light_FOV_120.0s_Bin1_S_gain0_20240626-010854_-10.1C_0002.fit dispatched.",
  "debug: - Dark_120.0s_Bin1_L_gain0_20240308-155723_-10.0C_0001.fit dispatched.",
  "debug: - Dark_120.0s_Bin1_L_gain0_20240308-155724_-10.0C_0002.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_S_gain100_20240626-094304_-10.5C_0001.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_S_gain100_20240626-094305_-10.0C_0002.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_S_gain100_20240626-094306_-10.5C_0003.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit dispatched.",
  "debug: - Light_FOV_60.0s_Bin1_S_gain100_20240627-010820_-10.1C_0001.fit dispatched.",
  "debug: - Light_FOV_60.0s_Bin1_S_gain100_20240627-010821_-10.1C_0002.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_L_gain100_20240308-155722_-10.0C_0001.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_L_gain100_20240308-155723_-10.0C_0002.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_L_gain100_20240308-155724_-10.0C_0003.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_L_gain100_20240308-155725_-10.0C_0004.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_S_gain100_20240626-094304_-10.5C_0001.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_S_gain100_20240626-094305_-10.0C_0002.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_S_gain100_20240626-094306_-10.5C_0003.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit dispatched.",
  "success: Dispatch complete.",
  "info: Generated tmp/project/H/Light_60.0s_Bin1_H_gain0_process/_poto_Mono_Preprocessing.ssf",
  "debug: - {{poto-dir}} 👉 <ROOT>/tmp/project",
  "debug: - {{lights}} 👉 <ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0",
  "debug: - {{flats}} 👉 <ROOT>/tmp/project/H/Flat_1.0ms_Bin1_H_gain100",
  "debug: - {{darks}} 👉 <ROOT>/tmp/project/any/Dark_60.0s_Bin1_gain0",
  "debug: - {{biases}} 👉 <ROOT>/tmp/project/any/Bias_1.0ms_Bin1_gain100",
  "debug: - {{process}} 👉 <ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0_process",
  "debug: - {{masters}} 👉 <ROOT>/tmp/project/H/Light_60.0s_Bin1_H_gain0_masters",
  "info: Generated tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process/_poto_Mono_Preprocessing.ssf",
  "debug: - {{poto-dir}} 👉 <ROOT>/tmp/project",
  "debug: - {{lights}} 👉 <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100",
  "debug: - {{flats}} 👉 <ROOT>/tmp/project/S/Flat_1.0ms_Bin1_S_gain100",
  "debug: - {{darks}} 👉 <ROOT>/tmp/project/any/Dark_60.0s_Bin1_gain100",
  "debug: - {{biases}} 👉 <ROOT>/tmp/project/any/Bias_1.0ms_Bin1_gain100",
  "debug: - {{process}} 👉 <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process",
  "debug: - {{masters}} 👉 <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_masters",
  "info: Generated tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process/_poto_Mono_Preprocessing.ssf",
  "debug: - {{poto-dir}} 👉 <ROOT>/tmp/project",
  "debug: - {{lights}} 👉 <ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0",
  "debug: - {{flats}} 👉 <ROOT>/tmp/project/S/Flat_1.0ms_Bin1_S_gain100",
  "debug: - {{darks}} 👉 <ROOT>/tmp/project/any/Dark_120.0s_Bin1_gain0",
  "debug: - {{biases}} 👉 <ROOT>/tmp/project/any/Bias_1.0ms_Bin1_gain100",
  "debug: - {{process}} 👉 <ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process",
  "debug: - {{masters}} 👉 <ROOT>/tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_masters",
  "info: Generated tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process/_poto_Mono_Preprocessing.ssf",
  "debug: - {{poto-dir}} 👉 <ROOT>/tmp/project",
  "debug: - {{lights}} 👉 <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100",
  "debug: - {{flats}} 👉 <ROOT>/tmp/project/S/Flat_1.0ms_Bin1_S_gain100",
  "debug: - {{darks}} 👉 <ROOT>/tmp/project/any/Dark_60.0s_Bin1_gain100",
  "debug: - {{biases}} 👉 <ROOT>/tmp/project/any/Bias_1.0ms_Bin1_gain100",
  "debug: - {{process}} 👉 <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process",
  "debug: - {{masters}} 👉 <ROOT>/tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_masters",
  "success: Scripts were generated ✅.",
]
`;
